RESOLVED FIXED70954
Embedded PDFs cannot be opened from Web archives
https://bugs.webkit.org/show_bug.cgi?id=70954
Summary Embedded PDFs cannot be opened from Web archives
Alexey Proskuryakov
Reported 2011-10-26 11:48:59 PDT
Archived resources don't have an HTTP status code.
Attachments
proposed fix (deleted)
2011-10-26 11:53 PDT, Alexey Proskuryakov
no flags
proposed fix (1.70 KB, patch)
2011-10-26 12:41 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-10-26 11:53:49 PDT
Created attachment 112571 [details] proposed fix
Adam Roben (:aroben)
Comment 2 2011-10-26 12:28:48 PDT
The content of attachment 112571 [details] has been deleted by Adam Roben (:aroben) <aroben@apple.com> who provided the following reason: Wrong patch The token used to delete this attachment was generated at 2011-10-26 12:28:38 PST.
Alexey Proskuryakov
Comment 3 2011-10-26 12:41:13 PDT
Created attachment 112578 [details] proposed fix
Oliver Hunt
Comment 4 2011-11-02 14:38:34 PDT
Comment on attachment 112578 [details] proposed fix Is it possible to have a test for this?
WebKit Review Bot
Comment 5 2011-11-02 15:25:07 PDT
Comment on attachment 112578 [details] proposed fix Clearing flags on attachment: 112578 Committed r99104: <http://trac.webkit.org/changeset/99104>
WebKit Review Bot
Comment 6 2011-11-02 15:25:11 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2011-11-02 15:25:57 PDT
> Is it possible to have a test for this? Probably. Ideally, we would go over the many built-in PDF commits and add tests.
Note You need to log in before you can comment on or make changes to this bug.