Emedded PDFs cannot be opened from Web archives https://bugs.webkit.org/show_bug.cgi?id=70954

Reviewed by Oliver Hunt.

BuiltInPDFPlugin doesn't have access to original ResourceResponse and has to re-create it
It doesn't seem to be possible to create an NSURLResponse with a non-null HTTP status code,
and NetscapePlugInStreamLoader becomes unhappy.

* loader/NetscapePlugInStreamLoader.cpp: (WebCore::NetscapePlugInStreamLoader::didReceiveResponse):
Allow 0 status code, it's not a real error to have one in response.


Canonical link: https://commits.webkit.org/87696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99104 268f45cc-cd09-0410-ab3c-d52691b4dbfc